# dribbling_controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  motion_tracking_controller.xml  mujoco_physics_plugins.xml  package.xml  run_dribble_mujoco.sh
config/g1/: controllers.yaml  softtouch_dribble_controllers.yaml  softtouch_mujoco_reset_standby.txt  softtouch_mujoco_reset_walkf_rf_frame0.txt
include/motion_tracking_controller/: MotionCommand.h  MotionObservation.h  MotionOnnxPolicy.h  MotionTrackingController.h  SoftTouchDribbleCommand.h  SoftTouchDribbleCommon.h  SoftTouchDribbleController.h  SoftTouchDribbleObservation.h  SoftTouchDribbleOnnxPolicy.h  SoftTouchMujocoBallBridgePlugin.h
launch/: mujoco.launch.py  real.launch.py  softtouch_dribble_mujoco.launch.py  softtouch_dribble_real.launch.py
mjcf/: g1_softtouch_dribble.xml
rviz/: softtouch_dribble.rviz
sim2sim_benchmark/: __init__.py  __main__.py  conditions.py  engine.py  html_report.py  plot.py  pysim.py  real_world.py  report.py  runner.py  stats.py  topup.py  train_dr.py
sim2sim_benchmark/demo/: README.md  make_demo_figures.py
src/: MotionCommand.cpp  MotionOnnxPolicy.cpp  MotionTrackingController.cpp  SoftTouchDribbleCommand.cpp  SoftTouchDribbleCommon.cpp  SoftTouchDribbleController.cpp  SoftTouchDribbleObservation.cpp  SoftTouchDribbleOnnxPolicy.cpp  SoftTouchMujocoBallBridgePlugin.cpp
tests/: test_sim2sim_benchmark_metrics.py
tools/: base_tf_broadcaster.py  bridge_softtouch_mocap_ball.py  dr_robustness_sweep.sh  dribble_pysim.py  dribble_pysim_multi.py  export_softtouch_dribble_policy.py  fall_monitor.py  friction_slip_test.py  gen_dr_mjcf.py  kill_sim.sh  make_standby_reset.py  plot_eval_matrix.py  record_mujoco.sh
tools/calibration/: ball_roll_test.py
tools/onnx_export/: export_softtouch_dribble_policy.py
tools/reset_export/: export_softtouch_mujoco_reset_state.py  export_standby_reset_state.py
tools/ros2_dr_sweep/: dr_robustness_sweep.sh  fall_monitor.py  gen_dr_mjcf.py  kill_sim.sh
tools/ros_utils/: record_mujoco.sh
